--- a/DonateMoney.css
+++ b/DonateMoney.css
@@ -122,12 +122,12 @@
   {
     display: grid;
     grid-template-areas:
-      'menu menu menu menu menu menu'
-      'title title title title title title'
-      'subtitle subtitle subtitle subtitle subtitle subtitle'
-      'twoWays twoWays twoWays twoWays twoWays twoWays'
-      'mailHeader mailHeader mailHeader'
-      'mailText mailText mailText'
-      'emailHeader emailHeader emailHeader'
-      'emailText emailText emailText';
+      'menu'
+      'title'
+      'subtitle'
+      'twoWays'
+      'mailHeader'
+      'mailText'
+      'emailHeader'
+      'emailText';
   }
